--- a/average.ipynb
+++ b/average.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 131,
    "id": "002e90c5-202a-4a08-b0a4-8d02d50cf2bb",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 132,
    "id": "fba52966-954c-491b-88ea-7132a1228c1d",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 133,
    "id": "50dd59b8-d3bb-472f-9a0b-91240ca3ed49",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [09:18<00:00,  1.79it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:29<00:00, 34.44it/s]\n"
      ]
     },
     {
@@ -211,7 +211,7 @@
        "[50000 rows x 3 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,29 +219,34 @@
    "source": [
     "preds = pd.DataFrame(columns=['gene', 'perturbation', 'expression'], index=range(50_000))\n",
     "\n",
+    "cols_to_avg_dict = {}\n",
+    "for pair in pairs_to_predict:\n",
+    "    # for k in range(1):\n",
+    "    #     pair = pairs_to_predict[0]\n",
+    "    g1 = pair.split('+')[0]\n",
+    "    g2 = pair.split('+')[1]\n",
+    "    # add control columns\n",
+    "    cols_to_average = [x for x in df.columns if (('ctrl' in x)&(len(x)<=7))]\n",
+    "\n",
+    "    # add columns if either gene in the perturbation was part of a previous double perturbation\n",
+    "    for double in d_per:\n",
+    "        if ((g1 in double) | (g2 in double)):\n",
+    "            cols_to_add = [x for x in df.columns if double in x]\n",
+    "            cols_to_average.extend(cols_to_add)\n",
+    "    \n",
+    "    # add columns if either gene in the perturbation was previously sinlgy perturbed\n",
+    "    for single in s_per:\n",
+    "        if ((g1 in single) | (g2 in single)):\n",
+    "            cols_to_add = [x for x in df.columns if (((single+'+') in x)|(('+'+single) in x))]\n",
+    "            cols_to_average.extend(cols_to_add)\n",
+    "    cols_to_avg_dict[pair] = cols_to_average\n",
+    "\n",
     "j = 0\n",
     "for i in tqdm(range(len(genes_to_predict))):\n",
     "# for i in tqdm(range(1)):\n",
     "    gene = genes_to_predict[i]\n",
     "    for pair in pairs_to_predict:\n",
-    "    # for k in range(1):\n",
-    "    #     pair = pairs_to_predict[0]\n",
-    "        g1 = pair.split('+')[0]\n",
-    "        g2 = pair.split('+')[1]\n",
-    "        # add control columns\n",
-    "        cols_to_average = [x for x in df.columns if (('ctrl' in x)&(len(x)<=7))]\n",
-    "\n",
-    "        # add columns if either gene in the perturbation was part of a previous double perturbation\n",
-    "        for double in d_per:\n",
-    "            if ((g1 in double) | (g2 in double)):\n",
-    "                cols_to_add = [x for x in df.columns if double in x]\n",
-    "                cols_to_average.extend(cols_to_add)\n",
-    "        \n",
-    "        # add columns if either gene in the perturbation was previously sinlgy perturbed\n",
-    "        for single in s_per:\n",
-    "            if ((g1 in single) | (g2 in single)):\n",
-    "                cols_to_add = [x for x in df.columns if (((single+'+') in x)|(('+'+single) in x))]\n",
-    "                cols_to_average.extend(cols_to_add)\n",
+    "        cols_to_average = cols_to_avg_dict[pair]    \n",
     "        temp = df.loc[gene]\n",
     "        temp = temp[cols_to_average]\n",
     "        expression = np.mean(temp)\n",
@@ -252,13 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 134,
    "id": "9a367a6d-c785-41c0-bf04-1620628ecae1",
    "metadata": {},
    "outputs": [],
    "source": [
     "preds = preds.sort_values(['perturbation','gene'])\n",
-    "preds.to_csv('./prediction/prediction.csv', index=False)"
+    "preds.to_csv('./prediction/prediction.csv', index=False)\n",
+    "preds.to_csv('./prediction/prediction_average.csv', index=False)"
    ]
   },
   {
