small format check

--- a/average.ipynb
+++ b/average.ipynb
@@ -601,9 +601,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58fafe31-1197-43d1-89a9-18bbd6d7cf66",
+   "metadata": {},
+   "source": [
+    "### test that I have the right order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fdc04a2d-f636-4433-a6ed-3ad67f68ffc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gene            True\n",
+       "perturbation    True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template = pd.read_csv('./prediction/prediction-template.csv')\n",
+    "template = template[['gene', 'perturbation']]\n",
+    "submission = preds[['gene', 'perturbation']].reset_index(drop=True)\n",
+    "(submission == template).all()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0da881d-b8a9-412e-a9ab-0f33c82200d9",
+   "id": "7d3ba113-b44b-4039-8dce-ee4c0ebd384a",
    "metadata": {},
    "outputs": [],
    "source": []
